--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,24 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+  <dimen name="fab_margin">16dp</dimen>
+
+
+  <!--    font size -->
+  <dimen name="text_10">10sp</dimen>
+  <dimen name="text_12">12sp</dimen>
+  <dimen name="text_14">14sp</dimen>
+  <dimen name="text_16">16sp</dimen>
+  <dimen name="text_18">18sp</dimen>
+  <dimen name="text_20">20sp</dimen>
+  <dimen name="text_24">24sp</dimen>
+  <dimen name="text_32">32sp</dimen>
+  <dimen name="text_36">36sp</dimen>
+  <dimen name="text_64">64sp</dimen>
+
+  <dimen name="space_12">12dp</dimen>
+  <dimen name="space_16">12dp</dimen>
+  <dimen name="space_24">24dp</dimen>
+  <dimen name="space_32">32dp</dimen>
+  <dimen name="space_64">64dp</dimen>
+
+  <dimen name="size_logo_signin">120dp</dimen>
 </resources>
