implement sign in - sign up

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -23,7 +23,7 @@
         android:fontFamily="@font/f_lato_bold"
         android:text="B"
         android:textColor="@android:color/white"
-        android:textSize="220sp"
+        android:textSize="120sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
         android:id="@+id/progressBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:progress="@{viewmodel.loadingPercent}"
         app:layout_constraintEnd_toEndOf="@+id/txt_logo"
         app:layout_constraintStart_toStartOf="@+id/txt_logo"
